<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/tourItemLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView_tour"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/tour_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/textView_tour_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tour_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView_tour_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tour_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />




    </LinearLayout>

    <ImageButton
        android:id="@+id/button_remove"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/remove"
        android:src="@drawable/ic_cart_tour"
        android:background="@drawable/button_selector"/>


</LinearLayout>
