<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="4dp"
    style="@style/NewsItemStyle"
    android:layout_marginBottom="16dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_heading"
        style="@style/NewsItemTitleStyle" />

    <TextView
        android:id="@+id/news_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/news_description"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/news_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/news_date"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>
