<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/UserFragmentStyle"
    tools:context=".UserFragment">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/user_profile_setting"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activUser_username"
        style="@style/UsernameStyle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/myprofile"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_design"
        android:elevation="4dp"
        android:text="@string/mytours"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/korsina"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_design"
        android:elevation="4dp"
        android:text="@string/korsina"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myprofile"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history_shop"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_design"
        android:elevation="4dp"
        android:text="@string/history_shop"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/korsina" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit"
        style="@style/CustomButtonStyle"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:elevation="4dp"
        android:text="@string/exit"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_shop" />

</androidx.constraintlayout.widget.ConstraintLayout>
